tests/spec/compile-fail/025_move_field_from_destroy_type_outside.zn
// category: compile-fail
// profile: freestanding
// purpose: fields of types with destroy blocks cannot be moved in safe code

module tests.fail.moveFieldFromDestroyTypeOutside;

struct Packet {
    bytes: Array<U8>,
}

impl Packet {
    destroy {}
}

fn bad(move packet: Packet) -> Array<U8> {
    return packet.bytes; // expected-error: cannot move field from type with destroy block
}
